# wren-emcc

./: .gitignore  .gitmodules  CMakeLists.txt  buildlibs.sh  notes.md  readme.md
data/: resources.gresource.xml
data/wren/: game.wren  io.wren  main.wren  math.wren  test.wren
data/wren/lib/math/: mat.wren  vec2.wren  vec3.wren  vec4.wren
docs/: index.data  index.js  index.wasm
gui/: Makefile  main.c
include/: builtins.h  method.h  script.h
include/io/: File.h  Path.h  Stream.h
include/math/: Mat.h  Vec2.h  Vec3.h  Vec4.h  math.h
include/tglm/: tglm.h
include/wc/: builtins.h  method.h  script-private.h  script.h  wc.h
include/wren/: path.h
libs/cfw/: CMakeLists.txt  readme.md
libs/cfw/include/: bitvector-private.h  bitvector.h  cfw.h  cfwfs.h  macros.h  random-private.h  random.h  uuid-private.h  uuid.h
libs/cfw/src/: bitvector.c  cfw.c  cfwfs.c  random.c  uuid.c
libs/dna/: CMakeLists.txt  readme.md
libs/dna/include/: arrayrenderer-private.h  arrayrenderer.h  dna.h  elementrenderer-private.h  elementrenderer.h  game-private.h  game.h  rect.h  resourcemanager-private.h  resourcemanager.h  shader-private.h  shader.h  texture2d-private.h  texture2d.h  tglm.h
libs/dna/src/: _tglm.c  arrayrenderer.c  elementrenderer.c  game.c  glad.c  resourcemanager.c  shader.c  texture2d.c  tglm.c
src/: CMakeLists.txt  game.c  main.1.c  main.c  method.c  script.c
src/dna/: Game.c
src/io/: File.c  Path.c  Stream.c
src/math/: Mat.c  Vec2.c  Vec3.c  Vec4.c
src/wc/: method.c  script.c
src/wren/: path.h
tests/: CMakeLists.txt  test_block.c  test_main.c  test_wren.c  unit.h
tests/test_block/: testclass-private.h  testclass.c  testclass.h
